testsuite/tests/deriving/should_fail/Roles6.hs
{-# LANGUAGE RoleAnnotations, TypeFamilies #-}

module Roles6 where

type family F a@R
